test/files/neg/t5357.check
t5357.scala:5: error: Pattern variables must start with a lower-case letter. (SLS 8.1.1.)
    case A: N => 1
          ^
one error found
